--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@ asyncFunction().then(...)
     name = 'Alice';
     static says = 'I love JS!';
 }
-</code></pre></section></section><section>- es6/es7/...
+</code></pre></section></section><section><section><h2>Popularity</h2><h4>languages usage</h4><img src="src/images/popularity-github.jpg"><small>@source: github</small></section><section><h2>Popularity</h2><h4>libraries count</h4><img src="src/images/modules.png"><small>@source: &nbsp;<a href="http://www.modulecounts.com/">modulecounts.com</a></small></section><section><h2>Popularity</h2><h4>google trends - tutorials search</h4><img src="src/images/popularity-pypl.png"><small>@source: &nbsp;<a href="http://pypl.github.io/PYPL.html">pypl.github.io</a></small></section></section><section>+ es6/es7/...
+
 - http://developer.telerik.com/featured/what-to-expect-from-javascript-in-2016-beyond-the-browser/?utm_source=javascriptweekly&utm_medium=email
 - https://github.com/copy/v86?utm_source=javascriptweekly&utm_medium=email
 - https://www.google.co.uk/search?q=always+bet+on+js
