--- a/index.html
+++ b/index.html
@@ -162,17 +162,14 @@ asyncFunction().then(...)
     name = 'Alice';
     static says = 'I love JS!';
 }
-</code></pre></section></section><section><section><h2>Popularity</h2><h4>languages usage</h4><img src="src/images/popularity-github.jpg"><small>@source: github</small></section><section><h2>Popularity</h2><h4>libraries count</h4><img src="src/images/modules.png"><small>@source: &nbsp;<a href="http://www.modulecounts.com/">modulecounts.com</a></small></section><section><h2>Popularity</h2><h4>google trends - tutorials search</h4><img src="src/images/popularity-pypl.png"><small>@source: &nbsp;<a href="http://pypl.github.io/PYPL.html">pypl.github.io</a></small></section></section><section>+ es6/es7/...
+</code></pre></section></section><section><section><h1>Popularity</h1></section><section><h2>Popularity</h2><h4>languages usage</h4><img src="src/images/popularity-github.jpg"><small>@source: github</small></section><section><h2>Popularity</h2><h4>libraries count</h4><img src="src/images/modules.png"><small>@source: &nbsp;<a href="http://www.modulecounts.com/">modulecounts.com</a></small></section><section><h2>Popularity</h2><h4>google trends - tutorials search</h4><img src="src/images/popularity-pypl.png"><small>@source: &nbsp;<a href="http://pypl.github.io/PYPL.html">pypl.github.io</a></small></section></section><section><section><h1>Ubiquity</h1></section><section><h2>Ubiquity</h2><h4>Browser & server</h4><ul><li>Node.js</li><li>Angular</li><li>React</li><li>Ember</li><li>Backbone</li><li>Meteor</li><li>Polymer</li><li>Aurelia</li><li>...</li></ul><div><br><a href="http://www.isaacchansky.me/days-since-last-new-js-framework/">days-since-last-new-js-framework</a></div></section><section><h2>Ubiquity</h2><h4>Desktop apps</h4><ul><li><a href="http://electron.atom.io/">Electron (Atom Shell)</a></li><li><a href="http://appjs.com/">App.js</a></li><li><a href="http://nwjs.io/">NW.js (node-webkit)</a></li></ul></section><section><h2>Ubiquity</h2><h4>Mobile native apps</h4><ul><li><a href="https://cordova.apache.org/">Cordova</a></li><li><a href="http://phonegap.com/">Phonegap</a></li><li><a href="https://facebook.github.io/react-native/">React-Native</a></li><li><a href="http://ionicframework.com/">Ionic</a></li><li><a href="https://www.nativescript.org/">NativeScript</a></li><li><a href="https://tabrisjs.com/">Tabris</a></li></ul></section><section><h2>Ubiquity</h2><h4>Microcontrollers</h4><ul><li><a href="http://johnny-five.io/">Johnny Five</a></li><li><a href="http://www.espruino.com/">Espruino</a></li><li><a href="https://tessel.io/">Tessel</a></li><li><a href="http://iop.io/">Iop.io</a></li></ul></section><section><h2>Ubiquity</h2><h4>Drones & IoT</h4><ul><li><a href="https://github.com/felixge/node-ar-drone">node-ar-drone</a></li><li><a href="https://samsung.github.io/iotjs/">iot.js</a></li><li><a href="https://cylonjs.com/">cyclon.js</a></li><li><a href="https://www.cesanta.com/products/smart-js">Smart.js</a></li></ul></section></section><section>+ es6/es7/...
 
 - http://developer.telerik.com/featured/what-to-expect-from-javascript-in-2016-beyond-the-browser/?utm_source=javascriptweekly&utm_medium=email
 - https://github.com/copy/v86?utm_source=javascriptweekly&utm_medium=email
 - https://www.google.co.uk/search?q=always+bet+on+js
 - transpiler Source-to-source compiler
-- nw.js/electron
-- react native
+
 - johny five
-- cordova/phonegap
-- nodejs
 - npm
 - tessel
 - web workers
